--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <!-- Teachable Machine Model URL -->
   <script type="text/javascript">
-    const URL = "https://teachablemachine.withgoogle.com/models/YOUR_MODEL_URL/"; // Replace with your model URL
+    const URL = "https://teachablemachine.withgoogle.com/models/fFZnpVlVM/"; // Replace with your model URL
 
     let model, webcam, labelContainer, maxPredictions;
 
