--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       text-align: center;
-      background-color: #f0f0f0;
+      background-color: #e9ecef;
       margin: 20px;
-      color: #333;
+      color: #343a40;
     }
 
     h1 {
       font-size: 2em;
-      color: #333;
+      color: #343a40;
       margin-bottom: 20px;
     }
 
@@ -42,34 +42,36 @@
       background-color: #007bff;
       color: #fff;
       border-radius: 5px;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s, transform 0.2s;
       flex: 1 1 150px;
       max-width: 200px;
     }
 
     #menu button:hover {
       background-color: #0056b3;
+      transform: scale(1.05);
     }
 
     #instructions {
       display: none;
       margin-bottom: 20px;
-      padding: 15px;
+      padding: 20px;
       background-color: #fff;
       border-radius: 10px;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
       max-width: 600px;
       margin: 0 auto 20px auto;
       text-align: left;
+      line-height: 1.6;
     }
 
     #controls-container {
       display: none;
       margin-bottom: 20px;
-      padding: 15px;
+      padding: 20px;
       background-color: #fff;
       border-radius: 10px;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
       max-width: 600px;
       margin: 0 auto;
       text-align: left;
@@ -87,13 +89,15 @@
 
     #camera-controls label {
       font-size: 1em;
+      flex: 1 1 100%;
+      text-align: center;
     }
 
     #cameraSelect {
-      padding: 5px;
+      padding: 8px;
       font-size: 1em;
       border-radius: 5px;
-      border: 1px solid #ccc;
+      border: 1px solid #ced4da;
       flex: 1 1 200px;
       max-width: 250px;
     }
@@ -106,22 +110,23 @@
       background-color: #28a745;
       color: #fff;
       border-radius: 5px;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s, transform 0.2s;
       flex: 1 1 150px;
       max-width: 200px;
     }
 
     #camera-controls button:hover {
       background-color: #218838;
+      transform: scale(1.05);
     }
 
     #webcam-container {
       display: none;
       margin: 20px auto;
       background-color: #fff;
-      padding: 15px;
+      padding: 20px;
       border-radius: 10px;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
       max-width: 90%;
       width: 500px;
       position: relative;
@@ -137,29 +142,30 @@
       background-color: #ffc107;
       color: #fff;
       border-radius: 5px;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s, transform 0.2s;
       width: 100%;
     }
 
     #captureButton:hover {
       background-color: #e0a800;
+      transform: scale(1.05);
     }
 
     #capturedCanvas {
       display: none;
       margin-top: 20px;
       max-width: 100%;
-      border: 1px solid #ccc;
+      border: 1px solid #ced4da;
       border-radius: 10px;
     }
 
     #file-container {
       display: none;
       margin: 30px auto;
-      padding: 15px;
+      padding: 20px;
       background-color: #fff;
       border-radius: 10px;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
       max-width: 500px;
       width: 90%;
     }
@@ -175,12 +181,13 @@
       background-color: #28a745;
       color: #fff;
       border-radius: 5px;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s, transform 0.2s;
       display: inline-block;
     }
 
     #file-container label:hover {
       background-color: #218838;
+      transform: scale(1.05);
     }
 
     #label-container {
@@ -188,11 +195,12 @@
       font-size: 1em;
       max-width: 600px;
       margin: 20px auto 0 auto;
-      padding: 10px;
+      padding: 20px;
       background-color: #fff;
       border-radius: 10px;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
       text-align: left;
+      line-height: 1.6;
     }
 
     #label-container div {
@@ -201,10 +209,15 @@
       background: #007bff;
       color: #fff;
       border-radius: 5px;
-      display: inline-block;
+      display: block;
       min-width: 100px;
       width: 100%;
       box-sizing: border-box;
+      transition: background-color 0.3s;
+    }
+
+    #label-container div:hover {
+      background-color: #0056b3;
     }
 
     /* Loading Overlay */
@@ -214,7 +227,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(255, 255, 255, 0.8);
+      background: rgba(255, 255, 255, 0.9);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -230,7 +243,7 @@
 
     #loading-text {
       font-size: 1.5em;
-      color: #333;
+      color: #343a40;
     }
 
     /* Responsive Styles */
@@ -333,6 +346,7 @@
   <!-- Container to display the webcam -->
   <div id="webcam-container">
     <!-- Webcam canvas sẽ được thêm vào đây bởi JavaScript -->
+    <canvas id="webcamCanvas" style="max-width: 100%; border-radius: 10px;"></canvas>
     <button id="captureButton" onclick="captureImage()">Chụp Hình</button>
     <canvas id="capturedCanvas"></canvas>
   </div>
@@ -407,6 +421,12 @@
         webcam.stop();
         webcam = null;
       }
+      // Ẩn webcam container và nút chụp hình
+      document.getElementById('webcam-container').style.display = 'none';
+      document.getElementById('captureButton').style.display = 'none';
+      // Xóa canvas webcam
+      const webcamCanvas = document.getElementById('webcamCanvas');
+      webcamCanvas.getContext('2d').clearRect(0, 0, webcamCanvas.width, webcamCanvas.height);
     }
 
     // Liệt kê các camera và điền vào dropdown
@@ -426,9 +446,10 @@
         videoDevices.forEach((device, index) => {
           const option = document.createElement('option');
           option.value = device.deviceId;
-          if (device.label.toLowerCase().includes('front')) {
+          // Kiểm tra label để xác định camera trước hoặc sau
+          if (device.label.toLowerCase().includes('trước')) {
             option.text = `Camera trước (${index + 1})`;
-          } else if (device.label.toLowerCase().includes('back')) {
+          } else if (device.label.toLowerCase().includes('sau')) {
             option.text = `Camera sau (${index + 1})`;
           } else {
             option.text = device.label || `Camera ${index + 1}`;
@@ -479,7 +500,7 @@
 
       try {
         currentStream = await navigator.mediaDevices.getUserMedia(constraints);
-        webcam = new tmImage.Webcam(400, 400, false); // width, height, flip
+        webcam = new tmImage.Webcam(500, 500, false); // width, height, flip
         await webcam.setup(); // Sử dụng các constraints đã định nghĩa
         await webcam.play();
         window.requestAnimationFrame(loop);
@@ -487,6 +508,8 @@
         // Hiển thị webcam và nút chụp hình
         document.getElementById("webcam-container").style.display = 'block';
         document.getElementById("captureButton").style.display = 'block';
+        const webcamCanvas = document.getElementById('webcamCanvas');
+        webcamCanvas.style.display = 'block';
         document.getElementById("webcam-container").appendChild(webcam.canvas);
       } catch (error) {
         console.error("Lỗi khi truy cập webcam: ", error);
@@ -497,7 +520,7 @@
     // Hàm loop để cập nhật webcam liên tục
     async function loop() {
       if (webcam) {
-        webcam.update(); // Cập nhật hình ảnh từ webcam
+        await webcam.update(); // Cập nhật hình ảnh từ webcam
         window.requestAnimationFrame(loop);
       }
     }
@@ -520,8 +543,8 @@
       ctx.drawImage(webcam.canvas, 0, 0);
       capturedCanvas.style.display = 'block';
 
-      // Ẩn webcam.canvas nếu muốn
-      webcam.canvas.style.display = 'none';
+      // Dừng webcam để tránh chụp nhiều hình
+      stopWebcam();
 
       // Dự đoán từ hình ảnh đã chụp
       predictFromCapturedImage(capturedCanvas);
@@ -574,7 +597,14 @@
       img.onload = async function () {
         try {
           showLoading(true);
-          const prediction = await model.predict(img);
+          // Sử dụng một canvas để điều chỉnh kích thước nếu cần
+          const tempCanvas = document.createElement('canvas');
+          const ctx = tempCanvas.getContext('2d');
+          tempCanvas.width = img.width;
+          tempCanvas.height = img.height;
+          ctx.drawImage(img, 0, 0);
+          
+          const prediction = await model.predict(tempCanvas);
 
           // Hiển thị dự đoán
           const labelContainer = document.getElementById("label-container");
@@ -591,6 +621,10 @@
         } finally {
           showLoading(false);
         }
+      };
+
+      img.onerror = function () {
+        alert("Không thể tải ảnh. Vui lòng thử lại với một ảnh khác.");
       };
     }
 
